set the viewport; originally didn't as it seemed to screw up google maps on smaller screens (way too zoomed in), but this may just be a side-affect of using devtools. Fixed a lot of font-size issues, so several styles and media queries removed

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@ height: 100vh;
 	top: 30px;
 	color: rgb(204,85,85);
 	font-family: 'Lobster', Arial;
-	font-size: 3.5em;
+	font-size: 1.3em;
 	padding: 1% 2%;
 }
 .margin-top-sml {
@@ -62,7 +62,6 @@ height: 100vh;
 	width: 70%;
 	display: inline-block;
 	margin-left: 5%;
-	font-size: 2em;
 }
 .p-snippet {
 	margin: 0.5em;
@@ -77,7 +76,6 @@ height: 100vh;
 	max-height: 200px;
 }
 .filter-controls {
-	font-size: 1.75em;
 	padding: 10px;
 }
 .list-entry {
@@ -95,8 +93,11 @@ height: 100vh;
 .light-font {
 	font-weight: 300;
 }
-.info-container {
-	min-width: 300px;
-	min-height: 300px;
-	font-size: 2em;
+@media screen and (min-width: 768px) {
+	.nav .flex-row {
+		padding-top: 2%;
+	}
+	.nav-button {
+		margin-top: 20px;
+	}
 }
